<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">"- OR - "</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="login">Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>